@@ -1,6 +1,9 @@
  (Format: Year/Month/Day)
 Changes for 1.1:
 *07/05/20:
+   * Added resources session.screen<N>.maxDisable{Move,Resize}: <boolean>, which
+     prevent maximized windows from being moved/resized (Mark)
+     Window.cc Screen.cc/hh nls/fluxbox-nls.hh
    * Fixed bug #1717782, Bad fullscreen in ooimpress2  ( Henrik )
      mwm hint had no-resize which made resizing with 
      FluxboxWindow::setFullscreen impossible.
